@@ -518,7 +518,6 @@ public class FSEditLog {
     try {
       synchronized (this) {
         try {
-        assert editStreams.size() > 0 : "no editlog streams";
         printStatistics(false);
   
         // if somebody is already syncing, then wait
@@ -545,6 +544,7 @@ public class FSEditLog {
         sync = true;
   
         // swap buffers
+        assert editStreams.size() > 0 : "no editlog streams";
         for(EditLogOutputStream eStream : editStreams) {
           try {
             eStream.setReadyToFlush();
@@ -590,8 +590,8 @@ public class FSEditLog {
     } finally {
       // Prevent RuntimeException from blocking other log edit sync 
       synchronized (this) {
-        synctxid = syncStart;
         if (sync) {
+          synctxid = syncStart;
           isSyncRunning = false;
         }
         this.notifyAll();
@@ -1023,6 +1023,15 @@ public class FSEditLog {
       return getEditFile(it.next()).lastModified();
     return 0;
   }
+
+  /**
+   * Return the txid of the last synced transaction.
+   * For test use only
+   */
+  synchronized long getSyncTxId() {
+    return synctxid;
+  }
+
 
   // sets the initial capacity of the flush buffer.
   public void setBufferCapacity(int size) {
